--- a/fr/lesson/7/index.html
+++ b/fr/lesson/7/index.html
@@ -11,11 +11,11 @@
     <meta name="author" content="" />
 
     <link
-      href="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css"
+      href="/assets/css/bootstrap.min.css"
       rel="stylesheet"
     />
     <link
-      href="//netdna.bootstrapcdn.com/font-awesome/3.1.1/css/font-awesome.css"
+      href="/assets/css/font-awesome.css"
       rel="stylesheet"
     />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
@@ -27,14 +27,7 @@
     <nav class="navbar navbar-default">
       <div class="container">
         <ul class="nav navbar-nav">
-          <li>
-            <a
-              class="nav-link icon-github"
-              href="//github.com/gjtorikian/markdown-tutorial"
-              data-toggle="tooltip"
-              data-original-title="Get the source code to this website"
-            ></a>
-          </li>
+
           <li>
             <a
               class="nav-link"
@@ -184,14 +177,7 @@
     </nav>
     <!-- /.navbar -->
 
-    <div id="ad">
-      <script
-        async
-        type="text/javascript"
-        src="//cdn.carbonads.com/carbon.js?serve=CE7DCK7J&placement=wwwmarkdowntutorialcom"
-        id="_carbonads_js"
-      ></script>
-    </div>
+
 
     <div class="container">
       <div id="heroku-alert" class="alert alert-info" style="display: none">
@@ -300,9 +286,9 @@
     </div>
     <!-- /container -->
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
+    <script src="/assets/js/ace.js"></script>
+    <script src="/assets/js/jquery.min.js"></script>
+    <script src="/assets/js/bootstrap.min.js"></script>
     <script>
       // TODO: If possible, we should make this change to "development" where
       // appropriate.
