--- a/zh-tw/index.html
+++ b/zh-tw/index.html
@@ -20,7 +20,7 @@
     />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
 
-    <link rel="stylesheet" type="text/css" integrity="sha256-yB8Y4tOkfbZyLyGR5IzIzImHQIiqQjDmHhW/CFujmmY=" crossorigin="anonymous" href="/assets/main-c81f18e2d3a47db6722f2191e48cc8cc89874088aa4230e61e15bf085ba39a66.css">
+    <link rel="stylesheet" type="text/css"  crossorigin="anonymous" href="/assets/main-c81f18e2d3a47db6722f2191e48cc8cc89874088aa4230e61e15bf085ba39a66.css">
   </head>
 
   <body>
@@ -222,7 +222,7 @@ Markdown 因此很快地成為<a href="http://chronicle.com/blogs/profhacker/mar
       var environment = "production";
     </script>
 
-    <script integrity="sha256-J6LAIXXdnjzFVhR2nbtFYW4ub2I7VePhGVt9LbyZ7GE=" crossorigin="anonymous" type="text/javascript" src="/assets/main-27a2c02175dd9e3cc55614769dbb45616e2e6f623b55e3e1195b7d2dbc99ec61.js"></script> 
+    <script  crossorigin="anonymous" type="text/javascript" src="/assets/main-27a2c02175dd9e3cc55614769dbb45616e2e6f623b55e3e1195b7d2dbc99ec61.js"></script>
     <script src="/zh-tw/lesson_plans.js"></script>
     
   </body>
